# UCAS-NLP

./: README.md
assignment1/: pyproject.toml  requirements.txt
assignment1/merged_corpus_ch/: corpus_ch_1MB.txt  corpus_ch_2MB.txt  corpus_ch_3MB.txt
assignment1/merged_corpus_en/: corpus_en_2MB.txt
assignment1/src/: analyse_corpus.py  async_corpus_crawler.py  async_run.py  corpus_crawler.py  merge_corpus.py  run.py
assignment2/: assignment 2 技术报告.md  pyproject.toml
assignment2/data/: vocab.json
assignment2/src/: config.py  generate_text.py  model.py  path.py  train_and_eval.py  utils.py
